[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.10.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["fs", "cors"] }
tower-cookies = "0.10.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql" ] }
dotenv = "0.15.0"